[gd_scene load_steps=9 format=3 uid="uid://dwlbt8ycfsdtb"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1_olavd"]
[ext_resource type="PackedScene" path="res://Main/Gui/ScrollingBar.tscn" id="1_s1c57"]
[ext_resource type="StyleBox" uid="uid://c3vsr5sw3jfpa" path="res://Main/Gui/Main.tres" id="3_vqcvc"]
[ext_resource type="FontFile" uid="uid://dqa8iinipa0ds" path="res://Main/Gui/MSYH.TTC" id="5_56k7u"]
[ext_resource type="StyleBox" uid="uid://cyi7h7mydolug" path="res://Main/Gui/LineEdit.tres" id="5_ng1vl"]
[ext_resource type="StyleBox" uid="uid://bkglo65xoq6ux" path="res://Main/Gui/LineEditing.tres" id="6_r3wl2"]
[ext_resource type="AudioStream" uid="uid://8hf8kd0lumj5" path="res://Main/scared.wav" id="7_v0oqs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddlci"]
bg_color = Color(0.729412, 0.729412, 0.729412, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olavd")
metadata/_edit_horizontal_guides_ = [64.0, 368.0, 368.0, 368.0, 65.0, 584.0]

[node name="BG" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ddlci")

[node name="Content" type="Control" parent="BG"]
layout_mode = 2
anchors_preset = 0

[node name="ActiveRange" type="ColorRect" parent="BG/Content"]
layout_mode = 0
offset_top = -200.0
offset_right = 384.0
offset_bottom = 648.0
color = Color(0.804743, 0.804743, 0.804743, 1)

[node name="Word" type="Control" parent="BG/Content"]
layout_mode = 2
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2

[node name="Phonetic" type="Control" parent="BG/Content"]
layout_mode = 2
anchors_preset = 0

[node name="VSeparator" type="ColorRect" parent="BG/Content"]
layout_mode = 0
offset_left = -16.0
offset_top = -200.0
offset_right = -6.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="ScrollingBar" parent="." instance=ExtResource("1_s1c57")]
position = Vector2(0, 32)

[node name="File" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="File"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_vqcvc")

[node name="Label" type="Label" parent="File/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 338.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.25098, 1)
text = "Drop file here to load ( project.json or .wav)"

[node name="Ui" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -142.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Ui"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.081
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 0.0380001
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_vqcvc")

[node name="SpokenText" type="Label" parent="Ui/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 108.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
text = "Spoken Word"

[node name="TextEdit" type="LineEdit" parent="Ui"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 384.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
theme_override_styles/normal = ExtResource("5_ng1vl")
theme_override_styles/focus = ExtResource("6_r3wl2")
placeholder_text = " Word Here"

[node name="FpsEdit" type="LineEdit" parent="Ui"]
layout_mode = 0
offset_left = 8.0
offset_top = 64.0
offset_right = 91.063
offset_bottom = 95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
theme_override_styles/normal = ExtResource("5_ng1vl")
theme_override_styles/focus = ExtResource("6_r3wl2")
theme_override_styles/read_only = ExtResource("5_ng1vl")
placeholder_text = "Fps"

[node name="Clear" type="Button" parent="Ui"]
layout_mode = 0
offset_left = 392.0
offset_top = 24.0
offset_right = 478.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
theme_override_styles/normal = ExtResource("5_ng1vl")
theme_override_styles/hover = ExtResource("6_r3wl2")
theme_override_styles/pressed = ExtResource("6_r3wl2")
theme_override_styles/disabled = ExtResource("5_ng1vl")
theme_override_styles/focus = ExtResource("6_r3wl2")
text = "Clear Text"

[node name="Export" type="Button" parent="Ui"]
layout_mode = 0
offset_left = 488.0
offset_top = 24.0
offset_right = 576.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
theme_override_styles/normal = ExtResource("5_ng1vl")
theme_override_styles/hover = ExtResource("6_r3wl2")
theme_override_styles/pressed = ExtResource("6_r3wl2")
theme_override_styles/disabled = ExtResource("5_ng1vl")
theme_override_styles/focus = ExtResource("6_r3wl2")
text = "Export"

[node name="Mode" type="CheckButton" parent="Ui"]
layout_mode = 1
offset_left = 8.0
offset_top = 104.0
offset_right = 299.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_56k7u")
button_pressed = true
text = "Classic mode (Safer and slower)"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_v0oqs")
